Add batch option to determine depth of SIPs
